-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b28
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8216425 | 13 | Aleksey Shipilev | P1 | Resolved | Fixed | b03 |
| JDK-8217076 | 12.0.1 | Aleksey Shipilev | P1 | Resolved | Fixed | b03 |
| JDK-8230721 | 11.0.6-oracle | Aleksey Shipilev | P1 | Closed | Fixed | b01 |
| JDK-8217236 | 11.0.3 | Aleksey Shipilev | P1 | Resolved | Fixed | master |
When running tier1 with epsilon, the test ArrayStoreExceptionTest.java fails.
The attached patch makes the test pass by checking the type of the array elements.
The attached patch makes the test pass by checking the type of the array elements.
- backported by
-
JDK-8216425 Epsilon: ArrayStoreExceptionTest.java fails; missing arraycopy check
-
- Resolved
-
-
JDK-8217076 Epsilon: ArrayStoreExceptionTest.java fails; missing arraycopy check
-
- Resolved
-
-
JDK-8217236 Epsilon: ArrayStoreExceptionTest.java fails; missing arraycopy check
-
- Resolved
-
-
JDK-8230721 Epsilon: ArrayStoreExceptionTest.java fails; missing arraycopy check
-
- Closed
-