8215724: Epsilon: ArrayStoreExceptionTest.java fails; missing arraycopy check

Reviewed-by: eosterlund, lkorinth